src/tests/testfiles/function-declarations/6.txt
Error at 4:1: Function declaration parameters don't match previous declaration
int f(int a, float b);
^
 
